<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/toolbarOperations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:title="@string/operationsTitle" />


    <FrameLayout
        android:id="@+id/containerCurrentTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="56dp"
        android:paddingEnd="10dp"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txtCurrentTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currentTask" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/acceptTaskBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/accept"
                        android:textColor="@android:color/holo_green_light" />

                    <Button
                        android:id="@+id/declineTaskBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/decline"
                        android:textColorHint="@android:color/holo_red_light" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/containerOperations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="50dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/acceptanceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operationAcceptance" />

        <Button
            android:id="@+id/inventoryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/operationInventory" />

        <Button
            android:id="@+id/moveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/operationMove" />

        <Button
            android:id="@+id/shipmentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/operationShipment" />

        <Button
            android:id="@+id/serviceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/operationService" />
    </LinearLayout>
</FrameLayout>